serves/infrastructure/eks/manifests/ingress/external.yaml
kind: Service
apiVersion: v1
metadata:
  name: gitlab-pages
  namespace: serves
spec:
  type: ExternalName
  externalName: fluidattacks.gitlab.io
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: asserts
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/upstream-vhost: "fluidattacks.gitlab.io"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-redirect-from: //fluidattacks.gitlab.io/asserts/
    nginx.ingress.kubernetes.io/proxy-redirect-to: /asserts/
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $CSP '';
      set $CSP "${CSP} script-src 'self'";
      set $CSP '${CSP} web.fluidattacks.com';
      set $CSP '${CSP} *.jsdelivr.net';      # iFrame Resizer
      set $CSP '${CSP} *.mxpnl.com';         # Tracking
      set $CSP '${CSP} *.pingdom.net';       # Availability Monitoring
      set $CSP '${CSP} *.addthis.com *.addthisedge.com';    # Share functionalities
      set $CSP '${CSP} *.intercomcdn.com *.intercom.io';    # Online Chat
      set $CSP '${CSP} *.newrelic.com *.nr-data.net';       # APM
      set $CSP '${CSP} *.googletagmanager.com *.google-analytics.com';      # Analytics
      set $CSP '${CSP} *.formstack.com *.jquery.com *.bootstrapcdn.com';    # Forms functionalities
      set $CSP '${CSP} *.d2yyd1h5u9mauk.cloudfront.net';	            # Delighted
      set $CSP '${CSP} *.zdassets.com';	        # Zendesk Widget

      more_set_headers "Content-Security-Policy: ${CSP};";
      more_set_headers "Expires: 0";
      more_set_headers "Pragma: no-cache";
      more_set_headers "X-XSS-Protection: 1; mode=block";
      more_set_headers "X-Permitted-Cross-Domain-Policies: master-only";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "WWW-Authenticate: OAuth realm=\"Access to Fluid Attacks\" charset=\"UTF-8\"";
      more_set_headers "X-Frame-Options: deny";
      more_set_headers "Referrer-Policy: strict-origin";
      more_set_headers "Feature-Policy: webauthn 'none'";

spec:
  tls:
  - hosts:
    - fluidattacks.com
    secretName: fluidattacks-cert
  rules:
  - host: fluidattacks.com
    http:
      paths:
      - backend:
          serviceName: gitlab-pages
          servicePort: 443
        path: /asserts
---
kind: Service
apiVersion: v1
metadata:
  name: web
  namespace: serves
spec:
  type: ExternalName
  externalName: web.fluidattacks.com
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/upstream-vhost: "web.fluidattacks.com"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/app-root: "/web/"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Content-Security-Policy: ${CSP};";
      more_set_headers "Expires: 0";
      more_set_headers "Pragma: no-cache";
      more_set_headers "X-XSS-Protection: 1; mode=block";
      more_set_headers "X-Permitted-Cross-Domain-Policies: master-only";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "WWW-Authenticate: OAuth realm=\"Access to Fluid Attacks\" charset=\"UTF-8\"";
      more_set_headers "X-Frame-Options: deny";
      more_set_headers "Referrer-Policy: strict-origin";
      more_set_headers "Feature-Policy: webauthn 'none'";

      gzip "off";
spec:
  tls:
  - hosts:
    - fluidattacks.com
    secretName: fluidattacks-cert
  rules:
  - host: fluidattacks.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
