serves/infrastructure/eks/manifests/ingress/main-domains.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fluidattacks
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $CSP '';
      set $CSP "${CSP} script-src 'self' 'unsafe-inline' 'unsafe-eval'";
      set $CSP '${CSP} *.cloudflare.com';    # Integrates libraries
      set $CSP '${CSP} *.amazonaws.com';     # CDN
      set $CSP '${CSP} *.cloudfront.net';    # RDS Station
      set $CSP '${CSP} *.jsdelivr.net';      # iFrame Resizer
      set $CSP '${CSP} *.mxpnl.com';         # Tracking
      set $CSP '${CSP} *.pingdom.net';       # Availability Monitoring
      set $CSP '${CSP} *.addthis.com *.addthisedge.com';    # Share functionalities
      set $CSP '${CSP} *.intercomcdn.com *.intercom.io';    # Online Chat
      set $CSP '${CSP} *.newrelic.com *.nr-data.net';       # APM
      set $CSP '${CSP} *.googletagmanager.com *.google-analytics.com';      # Analytics
      set $CSP '${CSP} *.formstack.com *.jquery.com *.bootstrapcdn.com';    # Forms functionalities
      set $CSP '${CSP} *.d2yyd1h5u9mauk.cloudfront.net';	            # Delighted
      set $CSP '${CSP} *.zdassets.com';	        # Zendesk Widget
      set $CSP '${CSP} cdn.headwayapp.co';      # News widget
      set $CSP '${CSP} *.lr-ingest.io';	        # LogRocket cdn
      set $CSP '${CSP} *.lr-ingest.io';	        # LogRocket cdn
      set $CSP '${CSP}; worker-src blob:';      # LogRocket workers

      more_set_headers "Content-Security-Policy: ${CSP}";
      more_set_headers "Expires: 0";
      more_set_headers "Pragma: no-cache";
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains" always;
      more_set_headers "X-XSS-Protection: 1; mode=block";
      more_set_headers "X-Permitted-Cross-Domain-Policies: master-only";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "WWW-Authenticate: OAuth realm=\"Access to Fluid Attacks\" charset=\"UTF-8\"";

      gzip "off";
spec:
  tls:
  - hosts:
    - fluidattacks.com
    secretName: fluidattacks-cert
  rules:
  - host: fluidattacks.com
    http:
      paths:
      - backend:
          serviceName: integrates-app
          servicePort: 80
        path: /integrates/api(.*)
---
kind: Service
apiVersion: v1
metadata:
  name: integrates-new
  namespace: serves
spec:
  type: ExternalName
  externalName: integrates.fluidattacks.com
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: integrates
    namespace: serves
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/permanent-redirect: "https://integrates.fluidattacks.com"
      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  spec:
    tls:
    - hosts:
      - fluidattacks.com
      secretName: fluidattacks-cert
    rules:
    - host: fluidattacks.com
      http:
        paths:
        - backend:
            serviceName: integrates-new
            servicePort: 443
          path: /integrates(.*)
